Добавлена грид-сетка для секции сервисов

--- a/index.html
+++ b/index.html
@@ -226,15 +226,18 @@
         </ul>
       </section>
       <section class="services">
-        <div class="container">
-          <h2>Сервисы</h2>
-          <p class="services-info">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <div class="services-grid container">
+          <div class="services-about">
+            <h2>Сервисы</h2>
+            <p class="services-info">Хороший интернет-магазин отличается от плохого не только ценами!<br>
+              Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+          </div>
+          <ul class="services-list">
+            <li class="service-item"><button class="service-button" type="button" disabled>Доставка</button></li>
+            <li class="service-item"><button class="service-button" type="button">Гарантия</button></li>
+            <li class="service-item"><button class="service-button" type="button">Кредит</button></li>
+          </ul>
           <div class="services-description">
-            <ul class="services-list">
-              <li class="service-item"><button class="service-button" type="button" disabled>Доставка</button></li>
-              <li class="service-item"><button class="service-button" type="button">Гарантия</button></li>
-              <li class="service-item"><button class="service-button" type="button">Кредит</button></li>
-            </ul>
             <section class="delivery">
               <h3>Доставка</h3>
               <p class="delivery-info">Мы с удовольствием доставим ваш товар прямо<br>
