--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
         </section>
         <section class="contacts">
           <h2>Контакты</h2>
-          <p class="contacts-info">Вы можете забрать товар сами, заехав в наш офис:</p>
+          <p class="contacts-info">Вы можете забрать товар сами,<br>
+            заехав в наш офис:</p>
           <p>
             <a href="blank.html">
               <img src="img/map-small.png" width="300" height="158" alt="Карта офиса по адресу г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
