Добавлена грид-сетка футера

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     </main>
     <footer class="page-footer main-footer">
       <div class="footer-info-container">
-        <div class="container">
+        <div class="footer-info-grid container">
           <section class="footer-contacts">
             <h2 class="visually-hidden">Как нас найти</h2>
             <a class="main-footer-logo">
@@ -308,7 +308,7 @@
         </div>
       </div>
       <div class="footer-copyright-container">
-        <div class="container">
+        <div class="footer-copyright-grid container">
           <section class="footer-copyright">
             <h2 class="visually-hidden">Авторские права</h2>
             <p>© 2010–2019 Компания «Техномарт»<br>
@@ -334,7 +334,7 @@
           </p>
           <p class="footer-developers">
             Разработано —
-            <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </p>
         </div>
       </div>
