--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a class="main-header-logo">
             <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
           </a>
-          <form></form>
+          <form></form> <!-- Здесь будет форма/инпут поиска -->
           <a class="bookmark-link" href="blank.html">Закладки: 0</a>
           <a class="cart-link" href="blank.html">Корзина: 0</a>
           <a class="order-link" href="blank.html">Оформить заказ</a>
@@ -184,43 +184,43 @@
         </div>
         <ul class="popular-brands-list">
           <li class="popular-brand-item">
-            <a href="blank.html">
-              <img src="img/brand-bosch.png" width="126" height="37" alt="Логотип производителя BOSCH">
+            <a class="popular-brand-link" href="blank.html">
+              <img class="popular-brand-logo" src="img/brand-bosch.png" width="126" height="37" alt="Логотип производителя BOSCH">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a href="blank.html">
-              <img src="img/brand-makita.png" width="123" height="40" alt="Логотип производителя Makita">
+            <a class="popular-brand-link" href="blank.html">
+              <img class="popular-brand-logo" src="img/brand-makita.png" width="123" height="40" alt="Логотип производителя Makita">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a href="blank.html">
-              <img src="img/brand-dewalt.png" width="146" height="44" alt="Логотип производителя DeWALT">
+            <a class="popular-brand-link" href="blank.html">
+              <img class="popular-brand-logo" src="img/brand-dewalt.png" width="146" height="44" alt="Логотип производителя DeWALT">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a href="blank.html">
-              <img src="img/brand-interskol.png" width="200" height="76" alt="Логотип производителя Интерскол">
+            <a class="popular-brand-link" href="blank.html">
+              <img class="popular-brand-logo" src="img/brand-interskol.png" width="200" height="76" alt="Логотип производителя Интерскол">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a href="blank.html">
-              <img src="img/brand-hitachi.png" width="169" height="31" alt="Логотип производителя Hitachi">
+            <a class="popular-brand-link" href="blank.html">
+              <img class="popular-brand-logo" src="img/brand-hitachi.png" width="169" height="31" alt="Логотип производителя Hitachi">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a href="blank.html">
-              <img src="img/brand-lg.png" width="121" height="73" alt="Логотип производителя LG">
+            <a class="popular-brand-link" href="blank.html">
+              <img class="popular-brand-logo" src="img/brand-lg.png" width="121" height="73" alt="Логотип производителя LG">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a href="blank.html">
-              <img src="img/brand-aeg.png" width="151" height="96" alt="Логотип производителя AEG">
+            <a class="popular-brand-link" href="blank.html">
+              <img class="popular-brand-logo" src="img/brand-aeg.png" width="151" height="96" alt="Логотип производителя AEG">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a href="blank.html">
-              <img src="img/brand-metabo.png" width="204" height="69" alt="Логотип производителя Metabo">
+            <a class="popular-brand-link" href="blank.html">
+              <img class="popular-brand-logo" src="img/brand-metabo.png" width="204" height="69" alt="Логотип производителя Metabo">
             </a>
           </li>
         </ul>
