Добавлена сетка шапки из предыдущего задания

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="page-body">
     <header class="main-header">
       <div class="main-header-bar">
-        <div class="user-navigation-container">
+        <div class="user-navigation-grid">
           <a class="main-header-logo">
             <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
           </a>
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="container">
-        <div class="header-info-container">
+        <div class="header-info-grid">
           <section class="main-header-about">
             <h2 class="visually-hidden">О нас</h2>
             <p>Интернет-магазин<br>
