--- a/catalog.html
+++ b/catalog.html
@@ -10,40 +10,46 @@
   </head>
   <body class="page-body">
     <header class="main-header">
-      <div class="user-navigation">
-        <a class="main-header-logo" href="index.html">
-          <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
-        </a>
-        <!-- Здесь будет форма/инпут поиска -->
-        <a class="bookmark-link" href="blank.html">Закладки: 0</a>
-        <a class="cart-link cart-full" href="blank.html">Корзина: 10</a>
-        <a class="order-link" href="blank.html">Оформить заказ</a>
-      </div>
-      <section class="main-header-about">
-        <h2 class="visually-hidden">О нас</h2>
-        <i>Интернет-магазин<br>
-          строительных материалов<br>
-          и инструментов для ремонта</i>
-      </section>
-      <section class="main-header-contacts">
-        <h2 class="visually-hidden">Контактная информация</h2>
-        <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-        <p>г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
-      </section>
-      <section class="main-header-account">
-        <h2 class="visually-hidden">Личный кабинет</h2>
-        <div class="profile-container">
-          <div class="user-container">
-            <a class="username-link" href="blank.html">Равшан Джамшутович</a>
-            <a class="logout-link" href="blank.html">Выйти</a>
-          </div>
-          <ul class="profile-links">
-            <li class="profile-link-item"><a href="blank.html">Мои заказы</a></li>
-            <li class="profile-link-item"><a href="blank.html">Личный кабинет</a></li>
-          </ul>
+      <div class="main-header-bar">
+        <div class="user-navigation-grid">
+          <a class="main-header-logo" href="index.html">
+            <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
+          </a>
+          <form></form> <!-- Здесь будет форма/инпут поиска -->
+          <a class="bookmark-link" href="blank.html">Закладки: 0</a>
+          <a class="cart-link cart-full" href="blank.html">Корзина: 10</a>
+          <a class="order-link" href="blank.html">Оформить заказ</a>
         </div>
-      </section>
-      <nav class="main-navigation">
+      </div>
+      <div class="container">
+        <div class="header-info-grid">
+          <section class="main-header-about">
+            <h2 class="visually-hidden">О нас</h2>
+            <p>Интернет-магазин<br>
+              строительных материалов<br>
+              и инструментов для ремонта</p>
+          </section>
+          <section class="main-header-contacts">
+            <h2 class="visually-hidden">Контактная информация</h2>
+            <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+            <p>г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+          </section>
+          <section class="main-header-account">
+            <h2 class="visually-hidden">Личный кабинет</h2>
+            <div class="profile-container">
+              <div class="user-container">
+                <a class="username-link" href="blank.html">Равшан Джамшутович</a>
+                <a class="logout-link" href="blank.html">Выйти</a>
+              </div>
+              <ul class="profile-links">
+                <li class="profile-link-item"><a href="blank.html">Мои заказы</a></li>
+                <li class="profile-link-item"><a href="blank.html">Личный кабинет</a></li>
+              </ul>
+            </div>
+          </section>
+        </div>
+      </div>
+      <nav class="main-navigation container">
         <ul class="page-navigation">
           <li><a href="index.html">Главная</a></li>
           <li><a href="blank.html">Компания</a></li>
