--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="page-body">
     <header class="main-header">
       <div class="main-header-bar">
-        <div class="user-navigation-grid">
+        <div class="user-navigation">
           <a class="main-header-logo">
             <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
           </a>
