--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="container">
-        <div class="header-info-grid">
+        <div class="header-info">
           <section class="main-header-about">
             <h2 class="visually-hidden">О нас</h2>
             <p>Интернет-магазин<br>
