Работа над ошибками: убрана часть селекторов по тегам

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <div class="header-info">
           <section class="main-header-about">
             <h2 class="visually-hidden">О нас</h2>
-            <p>Интернет-магазин<br>
+            <p class="main-header-about-text">Интернет-магазин<br>
               строительных материалов<br>
               и инструментов для ремонта</p>
           </section>
           <section class="main-header-contacts">
             <h2 class="visually-hidden">Контактная информация</h2>
             <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-            <p>г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+            <p class="main-header-contacts-address">г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
           </section>
           <section class="main-header-account">
             <h2 class="visually-hidden">Личный кабинет</h2>
@@ -103,7 +103,7 @@
       </section>
       <section class="popular-items container">
         <div class="popular-items-container">
-          <h2>Популярные товары:</h2>
+          <h2 class="popular-items-title">Популярные товары:</h2>
           <a class="button" href="blank.html">Все популярные товары</a>
         </div>
         <ul class="popular-items-list">
@@ -179,7 +179,7 @@
       </section>
       <section class="popular-brands container">
         <div class="popular-brands-container">
-          <h2>Популярные производители:</h2>
+          <h2 class="popular-brands-title">Популярные производители:</h2>
           <a class="button" href="blank.html">Все производители</a>
         </div>
         <ul class="popular-brands-list">
@@ -228,7 +228,7 @@
       <section class="services">
         <div class="services-grid container">
           <div class="services-about">
-            <h2>Сервисы</h2>
+            <h2 class="services-about-title">Сервисы</h2>
             <p class="services-info">Хороший интернет-магазин отличается от плохого не только ценами!<br>
               Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           </div>
@@ -239,7 +239,7 @@
           </ul>
           <div class="services-description">
             <section class="delivery">
-              <h3>Доставка</h3>
+              <h3 class="delivery-title">Доставка</h3>
               <p class="delivery-info">Мы с удовольствием доставим ваш товар прямо<br>
               к вашему подъезду совершенно бесплатно!<br>
               Ведь мы неплохо заработаем,<br>
