Исправлена сетка шапки: возвращен грид
Вернула средней части шапки грид, поскольку он показался мне более простым в управлении (в данном конкретном случае). Флексы использованы в более мелких элементах.

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
   <body class="page-body inner-page">
     <header class="main-header">
       <div class="main-header-bar">
-        <div class="user-navigation-grid">
+        <div class="user-navigation">
           <a class="main-header-logo" href="index.html">
             <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
           </a>
@@ -25,14 +25,14 @@
         <div class="header-info-grid">
           <section class="main-header-about">
             <h2 class="visually-hidden">О нас</h2>
-            <p>Интернет-магазин<br>
+            <p class="main-header-about-text">Интернет-магазин<br>
               строительных материалов<br>
               и инструментов для ремонта</p>
           </section>
           <section class="main-header-contacts">
             <h2 class="visually-hidden">Контактная информация</h2>
             <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-            <p>г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+            <p class="main-header-contacts-address">г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
           </section>
           <section class="main-header-account">
             <h2 class="visually-hidden">Личный кабинет</h2>
