Немного изменена верстка сортировки, добавлены флексы, исправлены отступы
Сортировку сделала на флексах с добавлением контейнера и разделением двух видов ссылок (одни потом будут представлены в виде стрелочек) на два разных списка. Пока не доделала до конца, потому что нужны декоративные эффекты (замена текста на стрелочку), от которых будет зависеть ширина списка. Но примерную логику выстроила.

Поправила отступы, чтобы были ближе к макету.

--- a/catalog.html
+++ b/catalog.html
@@ -84,13 +84,17 @@
         </section>
         <section class="sort">
           <h2 class="sort-title">Сортировка:</h2>
-          <ul class="sort-links">
-            <li><a class="sort-link sort-link-active" href="#">По цене</a></li>
-            <li><a class="sort-link" href="#">По типу</a></li>
-            <li><a class="sort-link" href="#">По функционалу</a></li>
-            <li><a class="sort-link-arrow sort-link-active" href="#">По возрастанию</a></li> <!-- тут будет стрелочка -->
-            <li><a class="sort-link-arrow" href="#">По убыванию</a></li> <!-- и тут будет стрелочка -->
-          </ul>
+          <div class="sort-links-container">
+            <ul class="sort-links">
+              <li><a class="sort-link sort-link-active" href="#">По цене</a></li>
+              <li><a class="sort-link" href="#">По типу</a></li>
+              <li><a class="sort-link" href="#">По функционалу</a></li>
+            </ul>
+            <ul class="sort-links-arrows">
+              <li><a class="sort-link-arrow sort-link-active" href="#">По возрастанию</a></li> <!-- тут будет стрелочка -->
+              <li><a class="sort-link-arrow" href="#">По убыванию</a></li> <!-- и тут будет стрелочка -->
+            </ul>
+          </div>
         </section>
         <section class="catalog">
           <h2 class="visually-hidden">Список перфораторов</h2>
@@ -268,7 +272,7 @@
         <div class="container">
           <h2 class="visually-hidden">Справочная информация</h2>
           <p class="basic-information-title">Пара слов о перфораторах</p>
-          <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+          <p class="basic-information-description">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
           Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.<br>
           В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
         </div>
