--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
       <div class="main-header-bar">
         <div class="user-navigation">
           <a class="main-header-logo" href="index.html">
-            <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
+            <img class="main-header-logo-img" src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
           </a>
           <form></form> <!-- Здесь будет форма/инпут поиска -->
           <a class="bookmark-link" href="blank.html">Закладки: 0</a>
