--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
   <body class="page-body">
     <header class="main-header">
       <div class="main-header-bar">
-        <div class="user-navigation">
+        <div class="user-navigation-grid">
           <a class="main-header-logo">
             <img class="main-header-logo-img" src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
           </a>
-          <form></form> <!-- Здесь будет форма/инпут поиска -->
+          <div class="search-form">
+            <input class="search-form-input" type="search" name="search" id="search-field" placeholder="Поиск:">
+            <svg class="search-form-icon" width="17" height="17" viewBox="0 0 17 17">
+              <path d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
+            </svg>
+          </div>
           <a class="bookmark-link" href="blank.html">Закладки: 0</a>
           <a class="cart-link" href="blank.html">Корзина: 0</a>
           <a class="order-link" href="blank.html">Оформить заказ</a>
