--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
   <body class="page-body inner-page">
     <header class="main-header">
       <div class="main-header-bar">
-        <div class="user-navigation">
+        <div class="user-navigation-grid">
           <a class="main-header-logo" href="index.html">
             <img class="main-header-logo-img" src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
           </a>
