--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <h2 class="visually-hidden">Личный кабинет</h2>
             <div class="authorization-container">
               <a class="login-link" href="blank.html">Войти</a>
+              <svg class="login-link-icon" width="21" height="17" viewBox="0 0 21 17">
+                <path d="M14.875 8.5L6 0V6H0V11H6V17L14.875 8.5Z" fill="#C5C5C5"/>
+                <path d="M16.986 15.01H11.959V17H16.986C19.164 17 19.99 15.19 20.015 13.974V3.028C19.99 1.811 19.164 0 16.986 0H11.959V1.99H16.986C17.825 1.99 17.978 2.671 17.996 3.047V13.951C17.979 14.327 17.825 15.01 16.986 15.01Z" fill="#C5C5C5"/>
+              </svg>
               <a class="register-link" href="blank.html">Регистрация</a>
             </div>
           </section>
