Добавлена стилизация ярлыка NEW

--- a/catalog.html
+++ b/catalog.html
@@ -106,9 +106,26 @@
         <section class="catalog">
           <h2 class="visually-hidden">Список перфораторов</h2>
           <ul class="catalog-list">
+            <p class="tag-new visually-hidden"></p>
             <li class="catalog-item">
               <figure class="catalog-item-card">
-                <p class="tag-new"></p>
+                <p class="catalog-item-image">
+                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                </p>
+                <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+                <div class="price-container">
+                  <p class="catalog-item-old-price">30500 Р.</p>
+                  <a class="catalog-item-button" href="blank.html">25500 Р.</a>
+                </div>
+              </figure>
+              <figcaption class="catalog-item-options">
+                <a class="option-buy" href="blank.html">Купить</a>
+                <a class="option-bookmark" href="blank.html">В закладки</a>
+              </figcaption>
+            </li>
+            <p class="tag-new visually-hidden"></p>
+            <li class="catalog-item">
+              <figure class="catalog-item-card">
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </p>
@@ -124,8 +141,8 @@
               </figcaption>
             </li>
             <li class="catalog-item">
+              <p class="tag-new">new</p>
               <figure class="catalog-item-card">
-                <p class="tag-new"></p>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </p>
@@ -141,25 +158,8 @@
               </figcaption>
             </li>
             <li class="catalog-item">
+              <p class="tag-new">new</p>
               <figure class="catalog-item-card">
-                <p class="tag-new">new</p>
-                <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-                </p>
-                <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-                <div class="price-container">
-                  <p class="catalog-item-old-price">30500 Р.</p>
-                  <a class="catalog-item-button" href="blank.html">25500 Р.</a>
-                </div>
-              </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
-            </li>
-            <li class="catalog-item">
-              <figure class="catalog-item-card">
-                <p class="tag-new">new</p>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 </p>
@@ -175,8 +175,8 @@
               </figcaption>
             </li>
             <li class="catalog-item">
+              <p class="tag-new visually-hidden"></p>
               <figure class="catalog-item-card">
-                <p class="tag-new"></p>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </p>
@@ -192,8 +192,8 @@
               </figcaption>
             </li>
             <li class="catalog-item">
+              <p class="tag-new">new</p>
               <figure class="catalog-item-card">
-                <p class="tag-new">new</p>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 </p>
@@ -209,8 +209,8 @@
               </figcaption>
             </li>
             <li class="catalog-item">
+              <p class="tag-new">new</p>
               <figure class="catalog-item-card">
-                <p class="tag-new">new</p>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 </p>
@@ -226,8 +226,8 @@
               </figcaption>
             </li>
             <li class="catalog-item">
+              <p class="tag-new visually-hidden"></p>
               <figure class="catalog-item-card">
-                <p class="tag-new"></p>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </p>
@@ -243,8 +243,8 @@
               </figcaption>
             </li>
             <li class="catalog-item">
+              <p class="tag-new">new</p>
               <figure class="catalog-item-card">
-                <p class="tag-new">new</p>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 </p>
