--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
             <a class="offer-item-button" href="blank.html">На любой вкус</a>
           </li>
           <li class="offer-item">
-            <p class="tag-new"></p>
+            <p class="tag-new visually-hidden"></p>
             <h3>Инструмент</h3>
             <a class="offer-item-button" href="blank.html">На все случаи</a>
           </li>
           <li class="offer-item">
-            <p class="tag-new"></p>
+            <p class="tag-new visually-hidden"></p>
             <h3>Техника</h3>
             <a class="offer-item-button" href="blank.html">Для стройки</a>
           </li>
           <li class="offer-item">
-            <p class="tag-new"></p>
+            <p class="tag-new visually-hidden"></p>
             <h3>Скидка 50%</h3>
             <a class="offer-item-button" href="blank.html">На 350 товаров</a>
           </li>
           <li class="offer-item">
-            <p class="tag-new"></p>
+            <p class="tag-new visually-hidden"></p>
             <h3>Доставка</h3>
             <a class="offer-item-button" href="blank.html">Бесплатно</a>
           </li>
@@ -117,8 +117,8 @@
         </div>
         <ul class="popular-items-list">
           <li class="popular-item">
+            <p class="tag-new visually-hidden"></p>
             <figure class="popular-item-card">
-              <p class="tag-new"></p>
               <p class="popular-item-image">
                 <img src="img/item-bosch-bfg9000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
               </p>
@@ -134,8 +134,8 @@
             </figcaption>
           </li>
           <li class="popular-item">
+            <p class="tag-new">new</p>
             <figure class="popular-item-card">
-              <p class="tag-new">new</p>
               <p class="popular-item-image">
                 <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
               </p>
@@ -151,8 +151,8 @@
             </figcaption>
           </li>
           <li class="popular-item">
+            <p class="tag-new visually-hidden"></p>
             <figure class="popular-item-card">
-              <p class="tag-new"></p>
               <p class="popular-item-image">
                 <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
               </p>
@@ -168,8 +168,8 @@
             </figcaption>
           </li>
           <li class="popular-item">
+            <p class="tag-new visually-hidden">new</p>
             <figure class="popular-item-card">
-              <p class="tag-new">new</p>
               <p class="popular-item-image">
                 <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
               </p>
