Завершена стилизация элементов списка секции предложений (кроме слайдера) и основных кнопок

--- a/index.html
+++ b/index.html
@@ -69,29 +69,29 @@
       <section class="offers container">
         <h2 class="visually-hidden">Предложения</h2>
         <ul class="offers-list">
-          <li class="offer-item">
+          <li class="offer-item offer-item-materials">
             <p class="tag-new">new</p>
-            <h3>Материалы</h3>
+            <h3 class="offer-item-title">Материалы</h3>
             <a class="offer-item-button" href="blank.html">На любой вкус</a>
           </li>
-          <li class="offer-item">
+          <li class="offer-item offer-item-tool">
             <p class="tag-new visually-hidden"></p>
-            <h3>Инструмент</h3>
+            <h3 class="offer-item-title">Инструмент</h3>
             <a class="offer-item-button" href="blank.html">На все случаи</a>
           </li>
-          <li class="offer-item">
+          <li class="offer-item offer-item-equipment">
             <p class="tag-new visually-hidden"></p>
-            <h3>Техника</h3>
+            <h3 class="offer-item-title">Техника</h3>
             <a class="offer-item-button" href="blank.html">Для стройки</a>
           </li>
-          <li class="offer-item">
+          <li class="offer-item offer-item-discount">
             <p class="tag-new visually-hidden"></p>
-            <h3>Скидка 50%</h3>
+            <h3 class="offer-item-title">Скидка 50%</h3>
             <a class="offer-item-button" href="blank.html">На 350 товаров</a>
           </li>
-          <li class="offer-item">
+          <li class="offer-item offer-item-delivery">
             <p class="tag-new visually-hidden"></p>
-            <h3>Доставка</h3>
+            <h3 class="offer-item-title">Доставка</h3>
             <a class="offer-item-button" href="blank.html">Бесплатно</a>
           </li>
           <li class="offers-slider">
