Завершено оформление карточек товаров
Кнопке с ценой задала форму через псевдоэлемент с двумя градиентами.
Кнопка прижата к нижнему краю контейнера через флекс.

Стили при наведении на карточку (отображение кнопок "Купить и "В закладки" поверх фото) доработаны.

--- a/index.html
+++ b/index.html
@@ -119,14 +119,15 @@
           <li class="popular-item">
             <p class="tag-new visually-hidden"></p>
             <figure class="popular-item-card">
+              <h3 class="popular-item-title">
+                <span class="popular-item-name">Перфоратор BOSCH</span>
+                <span class="popular-item-model">BFG 9000</span>
+              </h3>
               <p class="popular-item-image">
                 <img src="img/item-bosch-bfg9000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
               </p>
-              <h3 class="popular-item-title">Перфоратор BOSCH BFG 9000</h3>
-              <div class="price-container">
-                <p class="popular-item-old-price">32500 Р.</p>
-                <a class="popular-item-button" href="blank.html">25500 Р.</a>
-              </div>
+              <p class="popular-item-price popular-item-old-price">32500 Р.</p>
+              <a class="popular-item-price popular-item-button" href="blank.html">25500 Р.</a>
             </figure>
             <figcaption class="popular-item-options">
               <a class="option-buy" href="blank.html">Купить</a>
@@ -136,14 +137,15 @@
           <li class="popular-item">
             <p class="tag-new">new</p>
             <figure class="popular-item-card">
+              <h3 class="popular-item-title">
+                <span class="popular-item-name">Перфоратор BOSCH</span>
+                <span class="popular-item-model">BFG 3000</span>
+              </h3>
               <p class="popular-item-image">
                 <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
               </p>
-              <h3 class="popular-item-title">Перфоратор BOSCH BFG 3000</h3>
-              <div class="price-container">
-                <p class="popular-item-old-price">22500 Р.</p>
-                <a class="popular-item-button" href="blank.html">15500 Р.</a>
-              </div>
+              <p class="popular-item-price popular-item-old-price">22500 Р.</p>
+              <a class="popular-item-price popular-item-button" href="blank.html">15500 Р.</a>
             </figure>
             <figcaption class="popular-item-options">
               <a class="option-buy" href="blank.html">Купить</a>
@@ -153,14 +155,15 @@
           <li class="popular-item">
             <p class="tag-new visually-hidden"></p>
             <figure class="popular-item-card">
+              <h3 class="popular-item-title">
+                <span class="popular-item-name">Перфоратор BOSCH</span>
+                <span class="popular-item-model">BFG 6000</span>
+              </h3>
               <p class="popular-item-image">
                 <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
               </p>
-              <h3 class="popular-item-title">Перфоратор BOSCH BFG 6000</h3>
-              <div class="price-container">
-                <p class="popular-item-old-price">30500 Р.</p>
-                <a class="popular-item-button" href="blank.html">25500 Р.</a>
-              </div>
+              <p class="popular-item-price popular-item-old-price">30500 Р.</p>
+              <a class="popular-item-price popular-item-button" href="blank.html">25500 Р.</a>
             </figure>
             <figcaption class="popular-item-options">
               <a class="option-buy" href="blank.html">Купить</a>
@@ -170,14 +173,15 @@
           <li class="popular-item">
             <p class="tag-new visually-hidden">new</p>
             <figure class="popular-item-card">
+              <h3 class="popular-item-title">
+                <span class="popular-item-name">Перфоратор BOSCH</span>
+                <span class="popular-item-model">BFG 2000</span>
+              </h3>
               <p class="popular-item-image">
                 <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
               </p>
-              <h3 class="popular-item-title">Перфоратор BOSCH BFG 2000</h3>
-              <div class="price-container">
-                <p class="popular-item-old-price"></p>
-                <a class="popular-item-button" href="blank.html">12500 Р.</a>
-              </div>
+              <p class="popular-item-price popular-item-old-price"></p>
+              <a class="popular-item-price popular-item-button" href="blank.html">12500 Р.</a>
             </figure>
             <figcaption class="popular-item-options">
               <a class="option-buy" href="blank.html">Купить</a>
