--- a/catalog.html
+++ b/catalog.html
@@ -106,68 +106,18 @@
         <section class="catalog">
           <h2 class="visually-hidden">Список перфораторов</h2>
           <ul class="catalog-list">
-            <p class="tag-new visually-hidden"></p>
             <li class="catalog-item">
+              <p class="tag-new visually-hidden"></p>
               <figure class="catalog-item-card">
+                <h3 class="catalog-item-title">
+                  <span class="catalog-item-name">Перфоратор BOSCH</span>
+                  <span class="catalog-item-model">BFG 6000</span>
+                </h3>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </p>
-                <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-                <div class="price-container">
-                  <p class="catalog-item-old-price">30500 Р.</p>
-                  <a class="catalog-item-button" href="blank.html">25500 Р.</a>
-                </div>
-              </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
-            </li>
-            <p class="tag-new visually-hidden"></p>
-            <li class="catalog-item">
-              <figure class="catalog-item-card">
-                <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-                </p>
-                <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-                <div class="price-container">
-                  <p class="catalog-item-old-price">30500 Р.</p>
-                  <a class="catalog-item-button" href="blank.html">25500 Р.</a>
-                </div>
-              </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
-            </li>
-            <li class="catalog-item">
-              <p class="tag-new">new</p>
-              <figure class="catalog-item-card">
-                <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-                </p>
-                <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-                <div class="price-container">
-                  <p class="catalog-item-old-price">30500 Р.</p>
-                  <a class="catalog-item-button" href="blank.html">25500 Р.</a>
-                </div>
-              </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
-            </li>
-            <li class="catalog-item">
-              <p class="tag-new">new</p>
-              <figure class="catalog-item-card">
-                <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
-                </p>
-                <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-                <div class="price-container">
-                  <p class="catalog-item-old-price">22500 Р.</p>
-                  <a class="catalog-item-button" href="blank.html">15500 Р.</a>
-                </div>
+                <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
+                <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
               </figure>
               <figcaption class="catalog-item-options">
                 <a class="option-buy" href="blank.html">Купить</a>
@@ -177,14 +127,15 @@
             <li class="catalog-item">
               <p class="tag-new visually-hidden"></p>
               <figure class="catalog-item-card">
+                <h3 class="catalog-item-title">
+                  <span class="catalog-item-name">Перфоратор BOSCH</span>
+                  <span class="catalog-item-model">BFG 6000</span>
+                </h3>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </p>
-                <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-                <div class="price-container">
-                  <p class="catalog-item-old-price">30500 Р.</p>
-                  <a class="catalog-item-button" href="blank.html">25500 Р.</a>
-                </div>
+                <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
+                <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
               </figure>
               <figcaption class="catalog-item-options">
                 <a class="option-buy" href="blank.html">Купить</a>
@@ -194,14 +145,15 @@
             <li class="catalog-item">
               <p class="tag-new">new</p>
               <figure class="catalog-item-card">
+                <h3 class="catalog-item-title">
+                  <span class="catalog-item-name">Перфоратор BOSCH</span>
+                  <span class="catalog-item-model">BFG 6000</span>
+                </h3>
                 <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </p>
-                <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-                <div class="price-container">
-                  <p class="catalog-item-old-price"></p>
-                  <a class="catalog-item-button" href="blank.html">12500 Р.</a>
-                </div>
+                <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
+                <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
               </figure>
               <figcaption class="catalog-item-options">
                 <a class="option-buy" href="blank.html">Купить</a>
@@ -211,14 +163,15 @@
             <li class="catalog-item">
               <p class="tag-new">new</p>
               <figure class="catalog-item-card">
+                <h3 class="catalog-item-title">
+                  <span class="catalog-item-name">Перфоратор BOSCH</span>
+                  <span class="catalog-item-model">BFG 3000</span>
+                </h3>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 </p>
-                <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-                <div class="price-container">
-                  <p class="catalog-item-old-price">22500 Р.</p>
-                  <a class="catalog-item-button" href="blank.html">15500 Р.</a>
-                </div>
+                <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
+                <a class="catalog-item-price catalog-item-button" href="blank.html">15500 Р.</a>
               </figure>
               <figcaption class="catalog-item-options">
                 <a class="option-buy" href="blank.html">Купить</a>
@@ -228,14 +181,15 @@
             <li class="catalog-item">
               <p class="tag-new visually-hidden"></p>
               <figure class="catalog-item-card">
+                <h3 class="catalog-item-title">
+                  <span class="catalog-item-name">Перфоратор BOSCH</span>
+                  <span class="catalog-item-model">BFG 6000</span>
+                </h3>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </p>
-                <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-                <div class="price-container">
-                  <p class="catalog-item-old-price">30500 Р.</p>
-                  <a class="catalog-item-button" href="blank.html">25500 Р.</a>
-                </div>
+                <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
+                <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
               </figure>
               <figcaption class="catalog-item-options">
                 <a class="option-buy" href="blank.html">Купить</a>
@@ -245,14 +199,69 @@
             <li class="catalog-item">
               <p class="tag-new">new</p>
               <figure class="catalog-item-card">
+                <h3 class="catalog-item-title">
+                  <span class="catalog-item-name">Перфоратор BOSCH</span>
+                  <span class="catalog-item-model">BFG 2000</span>
+                </h3>
                 <p class="catalog-item-image">
                   <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 </p>
-                <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-                <div class="price-container">
-                  <p class="catalog-item-old-price"></p>
-                  <a class="catalog-item-button" href="blank.html">12500 Р.</a>
-                </div>
+                <p class="catalog-item-price catalog-item-old-price"></p>
+                <a class="catalog-item-price catalog-item-button" href="blank.html">12500 Р.</a>
+              </figure>
+              <figcaption class="catalog-item-options">
+                <a class="option-buy" href="blank.html">Купить</a>
+                <a class="option-bookmark" href="blank.html">В закладки</a>
+              </figcaption>
+            </li>
+            <li class="catalog-item">
+              <p class="tag-new">new</p>
+              <figure class="catalog-item-card">
+                <h3 class="catalog-item-title">
+                  <span class="catalog-item-name">Перфоратор BOSCH</span>
+                  <span class="catalog-item-model">BFG 3000</span>
+                </h3>
+                <p class="catalog-item-image">
+                  <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+                </p>
+                <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
+                <a class="catalog-item-price catalog-item-button" href="blank.html">15500 Р.</a>
+              </figure>
+              <figcaption class="catalog-item-options">
+                <a class="option-buy" href="blank.html">Купить</a>
+                <a class="option-bookmark" href="blank.html">В закладки</a>
+              </figcaption>
+            </li>
+            <li class="catalog-item">
+              <p class="tag-new visually-hidden"></p>
+              <figure class="catalog-item-card">
+                <h3 class="catalog-item-title">
+                  <span class="catalog-item-name">Перфоратор BOSCH</span>
+                  <span class="catalog-item-model">BFG 6000</span>
+                </h3>
+                <p class="catalog-item-image">
+                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                </p>
+                <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
+                <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
+              </figure>
+              <figcaption class="catalog-item-options">
+                <a class="option-buy" href="blank.html">Купить</a>
+                <a class="option-bookmark" href="blank.html">В закладки</a>
+              </figcaption>
+            </li>
+            <li class="catalog-item">
+              <p class="tag-new">new</p>
+              <figure class="catalog-item-card">
+                <h3 class="catalog-item-title">
+                  <span class="catalog-item-name">Перфоратор BOSCH</span>
+                  <span class="catalog-item-model">BFG 2000</span>
+                </h3>
+                <p class="catalog-item-image">
+                  <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+                </p>
+                <p class="catalog-item-price catalog-item-old-price"></p>
+                <a class="catalog-item-price catalog-item-button" href="blank.html">12500 Р.</a>
               </figure>
               <figcaption class="catalog-item-options">
                 <a class="option-buy" href="blank.html">Купить</a>
