Оформлена секция сервисов: добавлен фон, поправлены отступы, завершена стилизация кнопок слайдера и их состояний
Сам слайдер сделаю чуть позже.

--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
             <p class="services-info">Хороший интернет-магазин отличается от плохого не только ценами!<br>
               Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           </div>
-          <ul class="services-list">
-            <li class="service-item"><button class="service-button" type="button" disabled>Доставка</button></li>
-            <li class="service-item"><button class="service-button" type="button">Гарантия</button></li>
-            <li class="service-item"><button class="service-button" type="button">Кредит</button></li>
-          </ul>
+          <div class="services-slider-controls">
+            <button class="service-button current" type="button" disabled>Доставка</button>
+            <button class="service-button" type="button">Гарантия</button>
+            <button class="service-button" type="button">Кредит</button>
+          </div>
           <div class="services-description">
             <section class="delivery">
               <h3 class="delivery-title">Доставка</h3>
