--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </div>
       </section>
       <div class="index-columns container">
-        <section class="about">
+        <section class="about column">
           <h2>Компания «Техномарт»</h2>
           <p class="about-company">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
           <p class="about-shipping">Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
@@ -273,13 +273,13 @@
           </ul>
           <a class="button about-button" href="blank.html">Подробнее о компании</a>
         </section>
-        <section class="contacts">
+        <section class="contacts column">
           <h2>Контакты</h2>
           <p class="contacts-info">Вы можете забрать товар сами,<br>
             заехав в наш офис:</p>
-          <p>
+          <p class="contacts-map">
             <a href="blank.html">
-              <img src="img/map-small.png" width="300" height="158" alt="Карта офиса по адресу г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+              <img class="contacts-map-image" src="img/map-small.png" width="300" height="158" alt="Карта офиса по адресу г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
             </a>
           </p>
           <a class="button contacts-button" href="blank.html">Заблудились? Напишите нам!</a>
