Поправлена стилизация футера (приближено к макету)

--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
           <section class="footer-contacts">
             <h2 class="visually-hidden">Как нас найти</h2>
             <a class="main-footer-logo">
-              <img src="img/logo-technomart-footer.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»">
+              <img class="main-footer-logo-img" src="img/logo-technomart-footer.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»">
             </a>
-            <p>
+            <p class="footer-contacts-info">
               г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
               <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
             </p>
@@ -324,20 +324,20 @@
         <div class="footer-copyright-grid container">
           <section class="footer-copyright">
             <h2 class="visually-hidden">Авторские права</h2>
-            <p>© 2010–2019 Компания «Техномарт»<br>
+            <p class="footer-copyright-info">© 2010–2019 Компания «Техномарт»<br>
               Все права защищены</p>
           </section>
           <section class="footer-social">
             <h2 class="visually-hidden">Социальные сети</h2>
             <ul>
               <li>
-                <a class="social-button" href="#">Вконтакте</a>
+                <a class="social-button social-button-vk" href="#" aria-label="ВКонтакте"></a>
               </li>
               <li>
-                <a class="social-button" href="#">Фейсбук</a>
+                <a class="social-button social-button-fb" href="#" aria-label="Фейсбук"></a>
               </li>
               <li>
-                <a class="social-button" href="#">Инстаграм</a>
+                <a class="social-button social-button-insta" href="#" aria-label="Инстаграм"></a>
               </li>
             </ul>
           </section>
