Завершена верстка и стилизация слайдера в секции предложений
Подготовлены классы для JS.

--- a/index.html
+++ b/index.html
@@ -96,16 +96,32 @@
           </li>
           <li class="offers-slider">
             <div class="offers-slider-content">
-              <a class="offers-slider-image" href="#">
-                <img src="img/slider-rotary-hammer.jpg" width="620" height="266" alt="Рабочий с перфоратором BOSCH">
-              </a>
-              <div class="offers-slider-title">
-                <h4>Перфораторы</h4>
-                <p>Настоящие мужские игрушки</p>
+              <ul class="offers-slider-list">
+                <li class="offers-slider-item offers-slide">
+                  <div class="offers-slider-title">
+                    <h3>Дрели</h3>
+                    <p>Соседям на радость!</p>
+                  </div>
+                  <img class="offers-slider-image" src="img/slider-drill.jpg" width="620" height="266" alt="Рабочий с дрелью BOSCH">
+                  <a class="button" href="catalog.html">Открыть каталог</a>
+                </li>
+                <li class="offers-slider-item offers-slide offers-slide-current">
+                  <div class="offers-slider-title">
+                    <h3>Перфораторы</h3>
+                    <p>Настоящие мужские игрушки</p>
+                  </div>
+                  <img class="offers-slider-image" src="img/slider-rotary-hammer.jpg" width="620" height="266" alt="Рабочий с перфоратором BOSCH">
+                  <a class="button" href="catalog.html">Открыть каталог</a>
+                </li>
+              </ul>
+              <div class="offers-slider-arrows">
+                <button class="offers-slider-arrow slider-button-back" type="button" aria-label="Назад"></button>
+                <button class="offers-slider-arrow slider-button-next" type="button" aria-label="Вперед"></button>
               </div>
-              <button class="offers-slider-button slider-button-back" type="button" disabled>Назад</button>
-              <button class="offers-slider-button slider-button-next" type="button">Вперед</button>
-              <a class="button" href="catalog.html">Открыть каталог</a>
+              <div class="offers-slider-controls">
+                <button class="offers-control-button" type="button" aria-label="Первый слайд"></button>
+                <button class="offers-control-button current" type="button" aria-label="Второй слайд"></button>
+              </div>
             </div>
           </li>
         </ul>
