Завершена разметка и стилизация слайдера в секции сервисов
Подготовлены классы для JS.

--- a/index.html
+++ b/index.html
@@ -262,18 +262,34 @@
               Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           </div>
           <div class="services-slider-controls">
-            <button class="service-button current" type="button" disabled>Доставка</button>
+            <button class="service-button current" type="button">Доставка</button>
             <button class="service-button" type="button">Гарантия</button>
             <button class="service-button" type="button">Кредит</button>
           </div>
-          <div class="services-description">
-            <section class="delivery">
-              <h3 class="delivery-title">Доставка</h3>
-              <p class="delivery-info">Мы с удовольствием доставим ваш товар прямо<br>
-              к вашему подъезду совершенно бесплатно!<br>
-              Ведь мы неплохо заработаем,<br>
-              поднимая его на ваш этаж!</p>
-            </section>
+          <div class="services-description services-description-wrapper-1">
+            <ul class="services-slider-list">
+              <li class="services-slider-item services-slide services-slide-current">
+                <h3 class="services-slide-title">Доставка</h3>
+                <p class="services-slide-info">Мы с удовольствием доставим ваш товар прямо<br>
+                  к вашему подъезду совершенно бесплатно!<br>
+                  Ведь мы неплохо заработаем,<br>
+                  поднимая его на ваш этаж!</p>
+              </li>
+              <li class="services-slider-item services-slide">
+                <h3 class="services-slide-title">Гарантия</h3>
+                <p class="services-slide-info">Если купленный у нас товар поломается или заискрит,
+                  а также в случае пожара, спровоцированного его возгоранием,
+                  вы всегда можете быть уверены в нашей гарантии.
+                  Мы обменяем сгоревший товар на новый.
+                  Дом уж восстановите как-нибудь сами.</p>
+              </li>
+              <li class="services-slider-item services-slide">
+                <h3 class="services-slide-title">Кредит</h3>
+                <p class="services-slide-info">Залезть в долговую яму стало проще!<br>
+                  Кредитные консультанты придут вам на помощь.</p>
+                <a class="button services-slide-button" href="blank.html">Отправить заявку</a>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
