Поправлен футер каталога

--- a/catalog.html
+++ b/catalog.html
@@ -332,20 +332,20 @@
         <div class="footer-copyright-grid container">
           <section class="footer-copyright">
             <h2 class="visually-hidden">Авторские права</h2>
-            <p>© 2010–2019 Компания «Техномарт»<br>
+            <p class="footer-copyright-info">© 2010–2019 Компания «Техномарт»<br>
               Все права защищены</p>
           </section>
           <section class="footer-social">
             <h2 class="visually-hidden">Социальные сети</h2>
             <ul>
               <li>
-                <a class="social-button" href="#">Вконтакте</a>
+                <a class="social-button social-button-vk" href="#" aria-label="ВКонтакте"></a>
               </li>
               <li>
-                <a class="social-button" href="#">Фейсбук</a>
+                <a class="social-button social-button-fb" href="#" aria-label="Фейсбук"></a>
               </li>
               <li>
-                <a class="social-button" href="#">Инстаграм</a>
+                <a class="social-button social-button-insta" href="#" aria-label="Инстаграм"></a>
               </li>
             </ul>
           </section>
