Завершена стилизация сортировки
Стрелочки добавлены через юникод. Можно ли так делтать? Часто ли на практике применяется юникод?

--- a/catalog.html
+++ b/catalog.html
@@ -109,8 +109,8 @@
               <li><a class="sort-link" href="#">По функционалу</a></li>
             </ul>
             <ul class="sort-links-arrows">
-              <li><a class="sort-link-arrow sort-link-active" href="#">По возрастанию</a></li> <!-- тут будет стрелочка -->
-              <li><a class="sort-link-arrow" href="#">По убыванию</a></li> <!-- и тут будет стрелочка -->
+              <li><a class="sort-link-arrow sort-link-active" href="#" aria-label="По возрастанию">&#9650;</a></li> <!-- тут будет стрелочка -->
+              <li><a class="sort-link-arrow" href="#" aria-label="По убыванию">&#9660;</a></li> <!-- и тут будет стрелочка -->
             </ul>
           </div>
         </section>
