Добавлена стилизация пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -109,8 +109,8 @@
               <li><a class="sort-link" href="#">По функционалу</a></li>
             </ul>
             <ul class="sort-links-arrows">
-              <li><a class="sort-link-arrow sort-link-active" href="#" aria-label="По возрастанию">&#9650;</a></li> <!-- тут будет стрелочка -->
-              <li><a class="sort-link-arrow" href="#" aria-label="По убыванию">&#9660;</a></li> <!-- и тут будет стрелочка -->
+              <li><a class="sort-link-arrow sort-link-active" href="#" aria-label="По возрастанию">&#9650;</a></li>
+              <li><a class="sort-link-arrow" href="#" aria-label="По убыванию">&#9660;</a></li>
             </ul>
           </div>
         </section>
@@ -289,7 +289,7 @@
             <li class="pagination-item">
               <a href="#">3</a>
             </li>
-            <li class="pagination-item">
+            <li class="pagination-item pagination-next">
               <a href="#">Следующая</a>
             </li>
           </ul>
