--- a/catalog.html
+++ b/catalog.html
@@ -15,14 +15,12 @@
           <a class="main-header-logo" href="index.html">
             <img class="main-header-logo-img" src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
           </a>
-          <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
-            <label for="search-field">
-              <svg class="search-form-icon" width="17" height="17" viewBox="0 0 17 17">
-                <path class="search-form-icon-path" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
-              </svg>
-            </label>
+          <div class="search-form">
             <input class="search-form-input" type="search" name="search" id="search-field" placeholder="Поиск:">
-          </form>
+            <svg class="search-form-icon" width="17" height="17" viewBox="0 0 17 17">
+              <path d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
+            </svg>
+          </div>
           <a class="bookmark-link" href="blank.html">Закладки: 0</a>
           <a class="cart-link cart-full" href="blank.html">Корзина: 10</a>
           <a class="order-link" href="blank.html">Оформить заказ</a>
