Отступы поправлены по макету (с использованием PixelPerfect)

--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,7 @@
           <section class="main-header-contacts">
             <h2 class="visually-hidden">Контактная информация</h2>
             <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-            <p class="main-header-contacts-address">г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+            <p class="main-header-contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </section>
           <section class="main-header-account">
             <h2 class="visually-hidden">Личный кабинет</h2>
@@ -308,11 +308,11 @@
         <div class="footer-info-grid container">
           <section class="footer-contacts">
             <h2 class="visually-hidden">Как нас найти</h2>
-            <a href="index.html" class="main-footer-logo">
-              <img src="img/logo-technomart-footer.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»">
+            <a class="main-footer-logo" href="index.html">
+              <img class="main-footer-logo-img" src="img/logo-technomart-footer.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»">
             </a>
-            <p>
-              г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+            <p class="footer-contacts-info">
+              г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
               <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
             </p>
           </section>
