--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <section class="main-header-contacts">
             <h2 class="visually-hidden">Контактная информация</h2>
             <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-            <p class="main-header-contacts-address">г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+            <p class="main-header-contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </section>
           <section class="main-header-account">
             <h2 class="visually-hidden">Личный кабинет</h2>
@@ -187,7 +187,7 @@
             </figcaption>
           </li>
           <li class="popular-item">
-            <p class="tag-new visually-hidden">new</p>
+            <p class="tag-new">new</p>
             <figure class="popular-item-card">
               <h3 class="popular-item-title">
                 <span class="popular-item-name">Перфоратор BOSCH</span>
@@ -327,7 +327,7 @@
               <img class="main-footer-logo-img" src="img/logo-technomart-footer.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»">
             </a>
             <p class="footer-contacts-info">
-              г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+              г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
               <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
             </p>
           </section>
