Немного исправлена разметка слайдера в секции сервисов

--- a/index.html
+++ b/index.html
@@ -286,8 +286,9 @@
               <li class="services-slider-item services-slide">
                 <h3 class="services-slide-title">Кредит</h3>
                 <p class="services-slide-info">Залезть в долговую яму стало проще!<br>
-                  Кредитные консультанты придут вам на помощь.</p>
-                <a class="button services-slide-button" href="blank.html">Отправить заявку</a>
+                  Кредитные консультанты придут вам на помощь.
+                  <a class="button services-slide-button" href="blank.html">Отправить заявку</a>
+                </p>
               </li>
             </ul>
           </div>
